			mvn clean test -Dtest=ec.cjpq.go4demo1.structuralPatterns.proxy.ProxyImageTest 

			mvn clean test -Dtest=ec.cjpq.go4demo1.behavioralpatterns.chainofresponsibility.AbstractLoggerTest
			mvn clean test -Dtest=ec.cjpq.go4demo1.behavioralpatterns.command.BrokerTest
			mvn clean test -Dtest=ec.cjpq.go4demo1.behavioralpatterns.interpreter.ExpressionTest
			mvn clean test -Dtest=ec.cjpq.go4demo1.behavioralpatterns.iterator.NameRepositoryTest
			mvn clean test -Dtest=ec.cjpq.go4demo1.behavioralpatterns.mediator.UserTest
			mvn clean test -Dtest=ec.cjpq.go4demo1.behavioralpatterns.memento.OriginatorTest
			mvn clean test -Dtest=ec.cjpq.go4demo1.behavioralpatterns.state.ContextTest 
			mvn clean test -Dtest=ec.cjpq.go4demo1.behavioralpatterns.strategy.ContextTest 
			mvn clean test -Dtest=ec.cjpq.go4demo1.behavioralpatterns.templatemethod.GameTest 

	* Git:
		+ Quick setup — if you’ve done this kind of thing before:
		https://github.com/carlosjulioperez/go4demo1.git

		+ …or create a new repository on the command line:
		echo "# go4demo1" >> README.md
		git init
		git add README.md
		git commit -m "first commit"
		git remote add origin https://github.com/carlosjulioperez/go4demo1.git
		git push -u origin master

		+ …or push an existing repository from the command line:
		git remote add origin https://github.com/carlosjulioperez/go4demo1.git
		git push -u origin master

	* Shell:
		+ Search and replace string in the current folder:
			http://unix.stackexchange.com/questions/112023/how-can-i-replace-a-string-in-a-files

			+ Non recursive:
				sed -i -- 's/foo/bar/g' *
				sed -i -- 's/Buider/Builder/g' *

			+ Recursive:
				find . -type f -exec sed -i 's/Builder/builder/g' {} +
structuralPatterns

		* Delete all swp files:]
			http://superuser.com/questions/480367/whats-the-easiest-way-to-delete-vim-swapfiles-ive-already-recovered-from

			find ./ -type f -name "\.*sw[klmnop]" -delete
			find ./ -type f -name "\.*swp" -delete
